--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,8 +1,9 @@
 page-landing {
   .landing-button{
-    height: 50em;
-    width: 50%;
+    height: 100px;
+    width: 100%;
     background-color: #009fd8;
+    font-size: 25%;
   }
 
   .title-text{
