added logo to wishlist page; centered title in toolbar on wishlist page; added new fields to db when creating wish list or task; made tasks and wishes tappable to allow villagers to caim an item or task

--- a/src/pages/wish-list/wish-list.scss
+++ b/src/pages/wish-list/wish-list.scss
@@ -3,4 +3,11 @@ page-wish-list {
     height:39px;
     width: auto;
   }
+
+  .open-item {
+    font-size: 1.5em;
+    font-style: "SayWeb";
+    color: color($colors, light);
+    text-align: center;
+  }
 }
