--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,7 +5,7 @@ page-home {
     width: auto;
   }
 
-  .open-project {
+  .open-task {
     font-size: 1.5em;
     font-style: "SayWeb";
     color: color($colors, light);
