fixed responsive sizing of buttons on landing page to work on Ionic View

--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -1,15 +1,20 @@
 page-landing {
+
   ion-row {
     text-align: center;
     align-items: center;
   }
 
+  .landing-button-col {
+    padding: 0px 25px;
+  }
+
   .landing-button{
     height: 100px;
-    width: 100%;
     background-color: #009fd8;
-    font-size: 25%;
+    font-size: 1.5em;
   }
+
 
   .title-text{
     text-align: center;
