shorten button + added arrow on schedule

--- a/src/pages/schedule/schedule.scss
+++ b/src/pages/schedule/schedule.scss
@@ -3,4 +3,10 @@ page-schedule {
 	 border-left: 2px solid #3BC7C4;
 	 padding-left: 10px;
 	}
+	.curr-day-right{
+		padding-left: 10px;
+	}
+	.curr-day-left{
+		padding-right: 10px;
+	}
 }
