added hard code to home

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,4 +24,9 @@ page-home {
     vertical-align: middle;
     background-color: color($colors, cats-light);
   }
+
+  .mental-color {
+    border-left: 2px solid #3BC7C4;
+    padding-left: 10px;
+  }
 }
