--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,6 +12,10 @@ page-home {
     text-align: center;
   }
 
+  .joker {
+    color: color($colors, cats-light);
+  }
+
 	#welcome-msg {
 		font-style: "roboto";
 		font-size: 1.2em;
