login page color scheme  made consistent with landing page

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -31,7 +31,8 @@ $colors: (
   dark:       #222,
   cats:		    #684c96,
   cats-light: #927FB5,
-  card-gray: #EBEDEF
+  card-gray: #EBEDEF,
+  sunflower: #1ba1e2
 );
 
 
