--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,10 @@
 page-login {
 
+// .login-title{
+//   color: color($colors, primary)
+// }
+  .toolbar-background {
+  background-color: color($colors, sunflower);
+}
+
 }
