change color of day based on currDay

--- a/src/pages/schedule/schedule.scss
+++ b/src/pages/schedule/schedule.scss
@@ -8,5 +8,15 @@ page-schedule {
 	}
 	.curr-day-left{
 		padding-right: 10px;
+		margin-left: 10px;
 	}
+
+	#btn-holder {
+		margin-left: 10px;
+	}
+
+	.active {
+		background-color: color($colors, secondary);
+	}
+
 }
