--- a/src/pages/settings/settings.scss
+++ b/src/pages/settings/settings.scss
@@ -3,6 +3,9 @@ page-settings {
     height:39px;
     width: auto;
   }
+  .toolbar-background {
+  background-color: color($colors, sunflower);
+  }
 
   .open-item {
     font-size: 1.5em;
