--- a/src/pages/schedule/schedule.scss
+++ b/src/pages/schedule/schedule.scss
@@ -9,11 +9,42 @@ page-schedule {
 	.curr-day-left{
 		padding-right: 10px;
 		margin-left: 10px;
+		margin-bottom: 10px;
 	}
 
+	.bottom {
+  padding: $content-padding;
+  position: fixed;
+  bottom:0;
+  left: 0;
+  right: 0;
+}
+	.date {
+    font-size: 1.1em;
+    font-style: "SayWeb";
+    color: #2c3e50;
+		text-align: center;
+  }
 	#btn-holder {
-		margin-left: 10px;
+		margin-left: 12px;
+		padding-right: -2px;
+		text-align: center;
+
 	}
+
+	.mental {
+    border-left: 5px solid #9b59b6;
+  }
+  .physical {
+    border-left: 5px solid #2ecc71;
+  }
+  .nutritional {
+    border-left: 5px solid #e74c3c;
+  }
+  .other {
+    border-left: 5px solid #f1c40f;
+  }
+
 
 	.active {
 		background-color: color($colors, secondary);
