--- a/src/pages/gifts/gifts.scss
+++ b/src/pages/gifts/gifts.scss
@@ -1,7 +1,13 @@
 page-gifts {
   .header-logo {
-    height:39px;
+    height:25px;
     width: auto;
+  }
+  .title {
+    font-size: 2.0em;
+    font-style: "SayWeb";
+    color: #2c3e50;
+    text-align: center;
   }
 
 }
