--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -27,7 +27,7 @@ $colors: (
   primary:    #7291af,
   secondary:  #698207,
   danger:     #f53d3d,
-  light:      #f4f4f4,
+  light:      #b1c3d3,
   dark:       #222,
   cats:		    #684c96,
   cats-light: #927FB5,
