--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,7 +3,7 @@ page-login {
 // .login-title{
 //   color: color($colors, primary)
 // }
-  .toolbar-background {
+  .login-navbar {
   background-color: color($colors, sunflower);
 }
 
